# ShareMemory

./: CMakeLists.txt  README.md
include/: ShareMemory.hpp
src/: read.cpp  write.cpp
